--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NodeJS APP</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="script.js" defer ></script>
 </head>
 <body>
     <header>
@@ -18,6 +19,9 @@
         <textarea name="comment" placeholder="Comment"></textarea>
         <button type="submit">DODAJ KOMENTARZ</button>
     </form>
+
+    <section class="commentsSection"></section>
+
 
 </body>
 </html>
